# portal2-rust-overlay

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  P2CE_SUPPORT.md  README.md  TODO.md  d3d9.def  release.toml
.cargo/: config.toml
.github/workflows/: release.yml  rust-test.yml
assets/: portal2_plugin.vdf
crates/client-wrapper/: Cargo.toml  Cargo.toml.bak
crates/client-wrapper/src/: lib.rs
crates/custom_windows/: Cargo.toml
crates/custom_windows/src/: custom.rs  debug_win.rs  engine_api_demo.rs  fogui.rs  lib.rs
crates/custom_windows/src/custom/: debug_win.rs  engine_api_demo.rs  fogui.rs  simple_win.rs  top_panel.rs
crates/custom_windows/src/custom/demos/: engine_api_demo.rs  esp.rs  mod.rs  overlay_demo.rs  simple_win.rs
crates/custom_windows/src/custom/tools/: debug_menu.rs  fogui.rs  mat_inspector.rs  mod.rs  post_processing_menu.rs
crates/d3d9-present-hook/: Cargo.toml
crates/d3d9-present-hook/src/: lib.rs
crates/d3d9-proxy/: Cargo.toml
crates/d3d9-proxy/src/: hooks.rs  lib.rs  logger.rs  proxy.rs  renderer.rs
crates/d3d9_hook_core/: Cargo.toml
crates/d3d9_hook_core/src/: lib.rs
crates/egui-d3d9/: Cargo.toml
crates/egui-d3d9/src/: app.rs  lib.rs  lite.rs  texman.rs
crates/egui_backend/: Cargo.toml  README.md
crates/egui_backend/src/: inputman.rs  lib.rs  lite.rs  state.rs
crates/engine-api/: Cargo.toml
crates/engine-api/src/: client.rs  interfaces.rs  lib.rs  signatures.rs  types.rs
crates/engine-api/src/cvar/: mod.rs
crates/injector_client_wrapper/: Cargo.toml
crates/injector_client_wrapper/src/: lib.rs
crates/injector_d3d9_proxy/: Cargo.toml  build.rs
crates/injector_d3d9_proxy/src/: lib.rs  proxy.rs
crates/injector_server_plugin/: Cargo.toml
crates/injector_server_plugin/src/: lib.rs
crates/overlay-app/: Cargo.toml
crates/overlay-app/src/: lib.rs
crates/overlay-ui/: Cargo.toml
crates/overlay-ui/src/: debug_win.rs  engine_api_demo.rs  fogui.rs  lib.rs
crates/overlay-ui/src/survey/: bug_report.rs  mod.rs  survey.rs  types.rs
crates/overlay_runtime/: Cargo.toml
crates/overlay_runtime/src/: lib.rs  logger.rs
crates/overlay_runtime/src/logger/: game_console.rs  mod.rs  to_toasts.rs
crates/overlay_types/: Cargo.toml
crates/overlay_types/src/: events.rs  input.rs  lib.rs  toasts.rs
crates/plugin_d3d9_hook/: Cargo.toml
crates/plugin_d3d9_hook/src/: lib.rs
crates/portal2-sdk/: README.md
crates/portal2-sdk/src/: debug_overlay.rs  engine_trace.rs  entities.rs  interfaces.rs  lib.rs  utils.rs
crates/portal2-sdk/src/cvar/: concommand.rs  convar.rs  flags.rs  mod.rs
crates/portal2-sdk/src/types/: entity.rs  mod.rs
crates/portal2-sdk/src/types/trace/: masks.rs  mod.rs
crates/source-sdk/: Cargo.toml
crates/source-sdk/src/: client.rs  interfaces.rs  lib.rs  memory.rs  signatures.rs  types.rs
crates/source-sdk/src/cvar/: convar.rs  flags.rs  mod.rs
src/: hooks.rs  lib.rs  memory.rs  proxy.rs  renderer.rs
src/engine/: client.rs  convar.rs  input_system.rs  interfaces.rs  mod.rs
src/overlay/: fogui.rs  mod.rs  utils.rs
