[package]
name = "d3d9-proxy"
version = "1.0.0"
edition = "2021"
description = "An experimental D3D9 proxy overlay for Portal 2, implemented in Rust with an Egui frontend"

[lib]
crate-type = ["cdylib"]

# [profile.release]
# debug = 0

[dependencies]
egui = "0.31.1"
egui-d3d9 = { path = "/home/lavashik/Downloads/egui-d3d9/egui-d3d9/" }  # (todo temp fix)
log = "0.4.22"
simplelog = "0.12.2"

[dependencies.windows]
version = "=0.59"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D9",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_System_ProcessStatus",
]

[package.metadata.docs.rs]
default-target = "i686-pc-windows-gnu"

[features]
default = []
