[workspace]
resolver = "2"
members = [
    "crates/d3d9-proxy",
    "crates/engine-api",
    "crates/egui-d3d9",
    "crates/overlay-ui",
]
default-members = ["crates/d3d9-proxy"]

[workspace.package]
publish = false
edition = "2024"
version = "0.1.0"

[workspace.lints.rust] # For exploratory dev only.
unused = { level = "allow", priority = -1 }
dead_code = { level = "allow", priority = -1 }

[workspace.dependencies]
egui = "0.31.1"
anyhow = "1.0"
egui-d3d9 = { path = "crates/egui-d3d9" }
engine-api = { path = "crates/engine-api" }
overlay-ui = { path = "crates/overlay-ui" }

[workspace.dependencies.windows]
version = "=0.59"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D9",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_System_ProcessStatus",
]
