[workspace]
resolver = "2"
members = [
    # Injectors (final DLLs)
    "crates/injector_d3d9_proxy",
    "crates/injector_client_wrapper",
    "crates/injector_server_plugin",

    # Core functionality
    "crates/d3d9_hook_core",
    "crates/egui_backend",

    # Overlay system
    "crates/overlay_runtime",
    "crates/custom_windows",

    # Source Engine FFI bindings
    "crates/source-sdk",
]
default-members = ["crates/injector_d3d9_proxy"]

[workspace.package]
publish = false
edition = "2024"
version = "0.1.0"

[workspace.lints.rust] # For exploratory dev only.
unused = { level = "allow", priority = -1 }
dead_code = { level = "allow", priority = -1 }

[workspace.dependencies]
egui = "0.31.1"
log = "0.4"
anyhow = "1.0"
egui_backend = { path = "crates/egui_backend" }
source-sdk = { path = "crates/source-sdk" }
custom_windows = { path = "crates/custom_windows" }
d3d9_hook_core = { path = "crates/d3d9_hook_core" }
overlay_runtime = { path = "crates/overlay_runtime" }

[workspace.dependencies.windows]
version = "=0.59"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D9",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_System_ProcessStatus",
]
