[package]
name = "d3d9-proxy"
publish.workspace = true
edition.workspace = true
version.workspace = true
[lints]
workspace = true

[lib]
name = "d3d9"
crate-type = ["cdylib"]

[dependencies]
log.workspace = true
windows.workspace = true
overlay-app.workspace = true
d3d9-present-hook.workspace = true
