[package]
name = "egui_backend"
version = "0.4.0"
authors = ["unknowntrojan"]
description = "D3D9 backend for egui"
repository = "https://github.com/unknowntrojan/egui_backend"

license = "MIT"
edition = "2024"

[lints]
workspace = true
[features]
silent = []

[dependencies]
windows = { version = "0.59", features = [
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_System_WindowsProgramming",
	"Win32_UI_WindowsAndMessaging",
	"Win32_Graphics_Direct3D_Fxc",
	"Win32_System_SystemServices",
	"Win32_Graphics_Dxgi_Common",
	"Win32_UI_Controls_RichEdit",
	"Win32_Graphics_Direct3D9",
	"Win32_System_DataExchange",
	"Win32_Graphics_Dxgi",
	"Win32_Graphics_Hlsl",
	"Win32_System_Memory",
	"Win32_Foundation",
	"Foundation_Numerics",
	"Wdk_System_SystemInformation",
] }

windows-registry = "0.4.0"

clipboard = "0.5.0"
egui.workspace = true
