[package]
name = "injector_d3d9_proxy"
publish.workspace = true
edition.workspace = true
version.workspace = true
[lints]
workspace = true

[lib]
name = "d3d9"
crate-type = ["cdylib"]

[dependencies]
log.workspace = true
windows.workspace = true
overlay_runtime.workspace = true
d3d9_hook_core.workspace = true
