[package]
name = "injector_server_plugin"
publish.workspace = true
edition.workspace = true
version.workspace = true
[lints]
workspace = true

[lib]
name = "egui_overlay_plugin"
crate-type = ["cdylib"]

[dependencies]
log.workspace = true
overlay_runtime.workspace = true
d3d9_hook_core.workspace = true
