[package]
name = "overlay-app"
publish.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
simplelog = "0.12.2"

log.workspace = true
egui.workspace = true
egui-d3d9.workspace = true
engine-api.workspace = true
overlay-ui.workspace = true
d3d9-present-hook.workspace = true
windows.workspace = true
