[package]
name = "overlay_runtime"
publish.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
simplelog = "0.12.2"

log.workspace = true
egui.workspace = true
egui_backend.workspace = true
source-sdk.workspace = true
custom_windows.workspace = true
d3d9_hook_core.workspace = true
windows.workspace = true
